# xxhr

./: CMakeLists.txt
xxhr/: auth.hpp  digest.hpp  session.cpp  session.hpp
xxhr/impl/: session-beast.cpp  session-beast.hpp  session-emscripten.hpp  session.hpp
